# ANNHaskell

./: How-to-test.txt  README.md  result.txt
annv2-simple/: README.md  annv2.cabal
annv2-simple/.stack-work/install/7abedeba/flag-cache/: annv2-0.1.0.0
annv2-simple/src/: Lib.hs  Main.hs  Parser.hs
annv2-simple/src/ANN/: ActivationFunction.hs  Layer.hs  MatrixUtils.hs  Network.hs  NetworkTraining.hs
