name:                annv2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/annv2#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable annv2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,matrix
                      ,vector
                      ,random
                      ,text
                      ,regex-compat
                      ,regex-posix
                      ,split
  other-modules:       ANN.ActivationFunction
                      ,ANN.Layer
                      ,ANN.NetworkTraining
                      ,ANN.Network
                      ,ANN.MatrixUtils
                      ,Parser
